fix for homepage on mobile

--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -15,6 +15,10 @@
 	.m-footer {
 		display: none;
 	}
+	#content {
+		display: table-cell;
+		vertical-align: middle;
+	}
 }
 .m-home-video {
 	position: fixed;
@@ -25,10 +29,6 @@
 	margin-top: 0;
 	pointer-events: none;
 	z-index: -1;
-}
-.m-home-content {
-	display: table-cell;
-	vertical-align: middle;
 }
 .m-home-header {
 	h1,
